--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -956,7 +956,8 @@ class GameEngine {
     init() {
         this.settings.username = $('start-username').value || 'Miner';
         this.localPlayer.username = this.settings.username;
-        this.settings.room = $('start-room').value || 'public';
+        // FIX: Trim room ID to ensure seeds match perfectly across clients
+        this.settings.room = ($('start-room').value || 'public').trim();
         this.settings.color = $('start-color').value;
         this.settings.broker = $('setting-broker').value;
 
@@ -2065,21 +2066,32 @@ class NetworkManager {
             }
         }
 
+        console.log(`Sending Map Diff: ${diffs.length} tiles to ${toId}`);
+
         // Protocol: Start -> Chunks -> End
         this.publish('map', { type: 'map_start', to: toId });
 
         if(diffs.length > 0) {
-            // chunking
-             const CHUNK_SIZE = 100;
-             for (let i=0; i<diffs.length; i+=CHUNK_SIZE) {
-                 this.publish('map', { type: 'sync', data: diffs.slice(i, i+CHUNK_SIZE), to: toId });
-             }
-        }
+            // FIX: Throttled sending to prevent network flood
+            const CHUNK_SIZE = 50; // Smaller chunks
+            let i = 0;
 
-        // Small delay to ensure order in some brokers
-        setTimeout(() => {
-             this.publish('map', { type: 'map_end', to: toId });
-        }, 100);
+            const sendLoop = setInterval(() => {
+                if (i >= diffs.length) {
+                    clearInterval(sendLoop);
+                    this.publish('map', { type: 'map_end', to: toId });
+                    return;
+                }
+                const chunk = diffs.slice(i, i+CHUNK_SIZE);
+                this.publish('map', { type: 'sync', data: chunk, to: toId });
+                i += CHUNK_SIZE;
+            }, 20); // 20ms delay between chunks (~50 chunks per second)
+        } else {
+             // Small delay to ensure order in some brokers even if empty
+             setTimeout(() => {
+                 this.publish('map', { type: 'map_end', to: toId });
+             }, 100);
+        }
     }
 
     publish(sub, payload) { if (this.client && this.client.connected) this.client.publish(`${this.baseTopic}${Game.settings.room}/${sub}`, JSON.stringify(payload)); }
@@ -2150,13 +2162,15 @@ class NetworkManager {
         }
         else if (msg.type === 'sync' && msg.to === Game.localPlayer.id) {
             // Apply Map Sync
-            msg.data.forEach(d => {
-                if (Game.map[d.y]) {
-                     Game.map[d.y][d.x] = d.v;
-                     // Auto discover synced changes so we can see them on minimap
-                     Game.discovered[d.y][d.x] = 1;
-                }
-            });
+            if (Array.isArray(msg.data)) {
+                msg.data.forEach(d => {
+                    if (Game.map[d.y]) {
+                        Game.map[d.y][d.x] = d.v;
+                        // Auto discover synced changes so we can see them on minimap
+                        Game.discovered[d.y][d.x] = 1;
+                    }
+                });
+            }
         }
         else if (msg.type === 'map_end' && msg.to === Game.localPlayer.id) {
              UI.showToast("Map Synced!", "success");
