fix: correct xray range calculation and remove merge conflict markers
Fixed two issues:
1. Removed leftover merge conflict markers in generate_summaries.py that were causing syntax errors
2. Corrected xray range calculation in megaminer/index.html by removing the hardcoded +6 offset, allowing the actual xrayRange value (6) to be used directly

--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -811,7 +811,7 @@ class GameEngine {
             money: 0,
             temp: 0, maxTemp: 100,
             rotation: 0, isDrilling: false,
-            drillTier: 0, heatResist: 0, xrayRange: 0,
+            drillTier: 0, heatResist: 0, xrayRange: 6,
             inventory: {},
             selectedBlock: TILE_TYPES.CASING,
             stats: { blocksMined: {}, totalMined: 0, startTime: now() },
@@ -1458,7 +1458,7 @@ class GameEngine {
 
         const pcx = this.localPlayer.gridX;
         const pcy = this.localPlayer.gridY;
-        const visionRad = this.localPlayer.xrayRange+6;
+        const visionRad = this.localPlayer.xrayRange;
 
         /// -------------------------------
         // WORLD TIME (host-based)
