--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="amogus.png">
+    <link rel="icon" type="image/x-icon" href="img/amogus.png">
     <title>Mega Miner Online - MQTT Multiplayer</title>
     <!-- MQTT.js Library -->
     <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
